force-app/main/default/objects/RGU_Change_to_approve__c/RGU_Change_to_approve__c.object-meta.xml
<CustomObject>
    <label>Referencia Elara por aprobar</label>
    <nameField>
        <displayFormat>RGUC-{0000000}</displayFormat>
        <label>RGU Change to approve</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Referencias Elara por aprobar</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>