force-app/main/default/objects/RGU_Change_to_approve__c/fields/Activo__c.field-meta.xml
<CustomField>
    <fullName>Activo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Activo</label>
    <type>Checkbox</type>
</CustomField>