force-app/main/default/objects/RGU_Change_to_approve__c/fields/Approval_Process__c.field-meta.xml
<CustomField>
    <fullName>Approval_Process__c</fullName>
    <label>Proceso de Aprobacion</label>
    <referenceTo>ApprovalProcess__c</referenceTo>
    <relationshipName>RGU_Changes_to_approve</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>