force-app/main/default/objects/RGU_Change_to_approve__c/fields/Banda__c.field-meta.xml
<CustomField>
    <fullName>Banda__c</fullName>
    <label>Banda</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Banda</valueSetName>
    </valueSet>
</CustomField>