force-app/main/default/objects/RGU_Change_to_approve__c/fields/BWBajadaKbps__c.field-meta.xml
<CustomField>
    <fullName>BWBajadaKbps__c</fullName>
    <label>BWBajadaKbps</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>