force-app/main/default/objects/RGU_Change_to_approve__c/fields/BWSubidaKbps__c.field-meta.xml
<CustomField>
    <fullName>BWSubidaKbps__c</fullName>
    <label>BWSubidaKbps</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>