force-app/main/default/objects/RGU_Change_to_approve__c/fields/Cap_Fap_GB__c.field-meta.xml
<CustomField>
    <fullName>Cap_Fap_GB__c</fullName>
    <label>Cap Fap GB</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>