force-app/main/default/objects/RGU_Change_to_approve__c/fields/Categoria_Unidad_de_Negocio__c.field-meta.xml
<CustomField>
    <fullName>Categoria_Unidad_de_Negocio__c</fullName>
    <label>Categoría por Unidad de Negocio</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Categoria_por_Unidad_de_Negocio</valueSetName>
    </valueSet>
</CustomField>