force-app/main/default/objects/RGU_Change_to_approve__c/fields/Cierre__c.field-meta.xml
<CustomField>
    <fullName>Cierre__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cierre</label>
    <type>Checkbox</type>
</CustomField>