force-app/main/default/objects/RGU_Change_to_approve__c/fields/CO_IOM__c.field-meta.xml
<CustomField>
    <fullName>CO_IOM__c</fullName>
    <description
	>Coltización - Información del formato IOM de Telmex</description>
    <inlineHelpText
	>Coltización - Información del formato IOM de Telmex</inlineHelpText>
    <label>CO IOM</label>
    <length>12</length>
    <type>Text</type>
</CustomField>