force-app/main/default/objects/RGU_Change_to_approve__c/fields/Conceptos_por_categor_a__c.field-meta.xml
<CustomField>
    <fullName>Conceptos_por_categor_a__c</fullName>
    <label>Conceptos por categoría</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Conceptos_por_categoria</valueSetName>
    </valueSet>
</CustomField>