force-app/main/default/objects/RGU_Change_to_approve__c/fields/Date_deactive_by_Client__c.field-meta.xml
<CustomField>
    <fullName>Date_deactive_by_Client__c</fullName>
    <description
	>Fecha en la que se realizó la desactivación por medio de proceso de aprobación</description>
    <inlineHelpText
	>Fecha en la que se realizó la desactivación por medio de proceso de aprobación</inlineHelpText>
    <label>Fecha desactivación cliente</label>
    <type>Date</type>
</CustomField>