force-app/main/default/objects/RGU_Change_to_approve__c/fields/Direccin_del_sitio__c.field-meta.xml
<CustomField>
    <fullName>Direccin_del_sitio__c</fullName>
    <label>Dirección del sitio</label>
    <length>255</length>
    <type>Text</type>
</CustomField>