force-app/main/default/objects/RGU_Change_to_approve__c/fields/EQUIPO_FINAL__c.field-meta.xml
<CustomField>
    <fullName>EQUIPO_FINAL__c</fullName>
    <label>EQUIPO FINAL</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AGENCIA</fullName>
            </value>
            <value>
                <fullName>FONCOS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>