force-app/main/default/objects/RGU_Change_to_approve__c/fields/Esquema__c.field-meta.xml
<CustomField>
    <fullName>Esquema__c</fullName>
    <label>Esquema VSAT</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Esquema_VSAT</valueSetName>
    </valueSet>
</CustomField>