force-app/main/default/objects/RGU_Change_to_approve__c/fields/ESTATUS_FACTURACION__c.field-meta.xml
<CustomField>
    <fullName>ESTATUS_FACTURACION__c</fullName>
    <label>ESTATUS FACTURACION</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BAJA DEFINITIVA</fullName>
            </value>
            <value>
                <fullName>FACTURANDO</fullName>
            </value>
            <value>
                <fullName>INICIA FACTURACION</fullName>
            </value>
            <value>
                <fullName>INICIA FACTURACION EN EL MES EN CURSO</fullName>
            </value>
            <value>
                <fullName>NO FACTURADO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>