force-app/main/default/objects/RGU_Change_to_approve__c/fields/ESTATUS_SITIO_TMX_RURAL__c.field-meta.xml
<CustomField>
    <fullName>ESTATUS_SITIO_TMX_RURAL__c</fullName>
    <label>ESTATUS SITIO TMX RURAL</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MIGRADO</fullName>
            </value>
            <value>
                <fullName>ACTA CIRCUNSTANCIADA</fullName>
            </value>
            <value>
                <fullName>ACTA EN PROCESO</fullName>
            </value>
            <value>
                <fullName>BAJA TELMEX</fullName>
            </value>
            <value>
                <fullName>POR MIGRAR</fullName>
            </value>
            <value>
                <fullName>PROGRAMAR MIGRACION</fullName>
            </value>
            <value>
                <fullName>CANCELADO TELMEX</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>