force-app/main/default/objects/RGU_Change_to_approve__c/fields/FASE_TMX_RURAL__c.field-meta.xml
<CustomField>
    <fullName>FASE_TMX_RURAL__c</fullName>
    <label>FASE TMX RURAL</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>108 ADICIONALES 1</fullName>
            </value>
            <value>
                <fullName>109 EN FALLA</fullName>
            </value>
            <value>
                <fullName>88 ADICIONALES 2</fullName>
            </value>
            <value>
                <fullName>FASE 1</fullName>
            </value>
            <value>
                <fullName>FASE 2</fullName>
            </value>
            <value>
                <fullName>FASE 2 CANCELADO</fullName>
            </value>
            <value>
                <fullName>FASE 2 INHABILITADO</fullName>
            </value>
            <value>
                <fullName>FASE 2 OT</fullName>
            </value>
            <value>
                <fullName>FASE 2021</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>