force-app/main/default/objects/RGU_Change_to_approve__c/fields/Fecha_Activo__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Activo__c</fullName>
    <label>Fecha Activo</label>
    <type>Date</type>
</CustomField>