force-app/main/default/objects/RGU_Change_to_approve__c/fields/Fecha_Actualizacion__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Actualizacion__c</fullName>
    <label>Fecha Actualizacion</label>
    <type>Date</type>
</CustomField>