force-app/main/default/objects/RGU_Change_to_approve__c/fields/Fecha_Cancelado__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Cancelado__c</fullName>
    <label>Fecha Cancelado</label>
    <type>Date</type>
</CustomField>