force-app/main/default/objects/RGU_Change_to_approve__c/fields/Fecha_de_Alta__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_Alta__c</fullName>
    <label>Fecha de Alta</label>
    <type>Date</type>
</CustomField>