force-app/main/default/objects/RGU_Change_to_approve__c/fields/Fecha_de_Baja__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_Baja__c</fullName>
    <label>Fecha de Baja</label>
    <type>Date</type>
</CustomField>