force-app/main/default/objects/RGU_Change_to_approve__c/fields/FECHA_DE_BAJA_TMX_RURAL__c.field-meta.xml
<CustomField>
    <fullName>FECHA_DE_BAJA_TMX_RURAL__c</fullName>
    <label>FECHA DE BAJA TMX RURAL</label>
    <type>Date</type>
</CustomField>