force-app/main/default/objects/RGU_Change_to_approve__c/fields/Fecha_de_emisin_IOM__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_emisin_IOM__c</fullName>
    <label>Fecha de emisión IOM</label>
    <type>Date</type>
</CustomField>