force-app/main/default/objects/RGU_Change_to_approve__c/fields/Fecha_de_Fin_de_Ingreso__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_Fin_de_Ingreso__c</fullName>
    <label>Fecha de Fin de Ingreso</label>
    <type>Date</type>
</CustomField>