force-app/main/default/objects/RGU_Change_to_approve__c/fields/Fecha_Desactivado__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Desactivado__c</fullName>
    <label>Fecha Desactivado</label>
    <type>Date</type>
</CustomField>