force-app/main/default/objects/RGU_Change_to_approve__c/fields/Fecha_Desinstalado__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Desinstalado__c</fullName>
    <label>Fecha Desinstalado</label>
    <type>Date</type>
</CustomField>