force-app/main/default/objects/RGU_Change_to_approve__c/fields/Fecha_instalado__c.field-meta.xml
<CustomField>
    <fullName>Fecha_instalado__c</fullName>
    <label>Fecha instalado</label>
    <type>Date</type>
</CustomField>