force-app/main/default/objects/RGU_Change_to_approve__c/fields/Fecha_Original_Activacion__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Original_Activacion__c</fullName>
    <label>Fecha Original Activacion</label>
    <type>Date</type>
</CustomField>