force-app/main/default/objects/RGU_Change_to_approve__c/fields/Fecha_por_Instalar__c.field-meta.xml
<CustomField>
    <fullName>Fecha_por_Instalar__c</fullName>
    <label>Fecha por Instalar</label>
    <type>Date</type>
</CustomField>