force-app/main/default/objects/RGU_Change_to_approve__c/fields/Fecha_Reemplazo__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Reemplazo__c</fullName>
    <label>Fecha Reemplazo</label>
    <type>Date</type>
</CustomField>