force-app/main/default/objects/RGU_Change_to_approve__c/fields/Fecha_Solicitud_Cliente__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Solicitud_Cliente__c</fullName>
    <label>Fecha Solicitud Cliente</label>
    <type>Date</type>
</CustomField>