force-app/main/default/objects/RGU_Change_to_approve__c/fields/Fecha_Solicitud_de_Cambio_Cliente__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Solicitud_de_Cambio_Cliente__c</fullName>
    <inlineHelpText
	>Ingresar la fecha en que se recibió la solicitud del cliente para ejecutar un cambio en la referencia Elara.</inlineHelpText>
    <label>Fecha Solicitud de Cambio Cliente</label>
    <type>Date</type>
</CustomField>