force-app/main/default/objects/RGU_Change_to_approve__c/fields/FECHA_VALIDACION_IVR_TMX__c.field-meta.xml
<CustomField>
    <fullName>FECHA_VALIDACION_IVR_TMX__c</fullName>
    <label>FECHA VALIDACION IVR TMX</label>
    <type>Date</type>
</CustomField>