force-app/main/default/objects/RGU_Change_to_approve__c/fields/Folio_IOM__c.field-meta.xml
<CustomField>
    <fullName>Folio_IOM__c</fullName>
    <label>Folio IOM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>