force-app/main/default/objects/RGU_Change_to_approve__c/fields/Id_Compra__c.field-meta.xml
<CustomField>
    <fullName>Id_Compra__c</fullName>
    <label>Id Orden de Compra / Pedido TMX</label>
    <length>255</length>
    <type>Text</type>
</CustomField>