force-app/main/default/objects/RGU_Change_to_approve__c/fields/Id_del_componente_Contratacin_IOM__c.field-meta.xml
<CustomField>
    <fullName>Id_del_componente_Contratacin_IOM__c</fullName>
    <label>Id del componente - Contratación IOM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>