force-app/main/default/objects/RGU_Change_to_approve__c/fields/ID_Sitio_COS__c.field-meta.xml
<CustomField>
    <fullName>ID_Sitio_COS__c</fullName>
    <label>ID Sitio COS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>