force-app/main/default/objects/RGU_Change_to_approve__c/fields/LINEAS_MIGRADAS_ACTIVAS__c.field-meta.xml
<CustomField>
    <fullName>LINEAS_MIGRADAS_ACTIVAS__c</fullName>
    <label>LINEAS MIGRADAS ACTIVAS</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>