force-app/main/default/objects/RGU_Change_to_approve__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <label>Localización</label>
    <scale>6</scale>
    <type>Location</type>
</CustomField>