force-app/main/default/objects/RGU_Change_to_approve__c/fields/Lugar__c.field-meta.xml
<CustomField>
    <fullName>Lugar__c</fullName>
    <label>Lugar</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Lugar</valueSetName>
    </valueSet>
</CustomField>