force-app/main/default/objects/RGU_Change_to_approve__c/fields/Nmero_de_parte_Renta_IOM__c.field-meta.xml
<CustomField>
    <fullName>Nmero_de_parte_Renta_IOM__c</fullName>
    <label>Número de parte - Renta IOM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>