force-app/main/default/objects/RGU_Change_to_approve__c/fields/Nmero_de_sitio_del_cliente__c.field-meta.xml
<CustomField>
    <fullName>Nmero_de_sitio_del_cliente__c</fullName>
    <label>Número de sitio del cliente</label>
    <length>255</length>
    <type>Text</type>
</CustomField>