force-app/main/default/objects/RGU_Change_to_approve__c/fields/Nombre_de_sitio__c.field-meta.xml
<CustomField>
    <fullName>Nombre_de_sitio__c</fullName>
    <label>Nombre de sitio</label>
    <length>255</length>
    <type>Text</type>
</CustomField>