force-app/main/default/objects/RGU_Change_to_approve__c/fields/Nombre_RGU_Original__c.field-meta.xml
<CustomField>
    <fullName>Nombre_RGU_Original__c</fullName>
    <formula
	>IF(ISBLANK(Referencia_Elara_Original__r.Referencia__c),  IF( ISBLANK( Referencia_Elara_Personalizada__c ) , Referencia_Elara__c , Referencia_Elara_Personalizada__c ) , Referencia_Elara_Original__r.Referencia__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nombre RGU Original</label>
    <type>Text</type>
</CustomField>