force-app/main/default/objects/RGU_Change_to_approve__c/fields/NUEVA_DIVISION_TMX_RURAL__c.field-meta.xml
<CustomField>
    <fullName>NUEVA_DIVISION_TMX_RURAL__c</fullName>
    <label>NUEVA DIVISION TMX RURAL</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>METRO</fullName>
            </value>
            <value>
                <fullName>METRO - SUR</fullName>
            </value>
            <value>
                <fullName>NORTE</fullName>
            </value>
            <value>
                <fullName>NORTE - OCCIDENTE</fullName>
            </value>
            <value>
                <fullName>OCCIDENTE</fullName>
            </value>
            <value>
                <fullName>SUR</fullName>
            </value>
            <value>
                <fullName>TELNOR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>