force-app/main/default/objects/RGU_Change_to_approve__c/fields/Numero_de_lineas__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_lineas__c</fullName>
    <label>Numero de lineas</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>