force-app/main/default/objects/RGU_Change_to_approve__c/fields/NUMERO_DE_LINEAS_MIGRADAS_ACTIVAS__c.field-meta.xml
<CustomField>
    <fullName>NUMERO_DE_LINEAS_MIGRADAS_ACTIVAS__c</fullName>
    <label>NUMERO DE LINEAS MIGRADAS ACTIVAS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>