force-app/main/default/objects/RGU_Change_to_approve__c/fields/Numero_de_sitio_por_aprobar__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_sitio_por_aprobar__c</fullName>
    <displayFormat>{000000000}</displayFormat>
    <label>Número de sitio por aprobar</label>
    <type>AutoNumber</type>
</CustomField>