force-app/main/default/objects/RGU_Change_to_approve__c/fields/Numero_Sitio__c.field-meta.xml
<CustomField>
    <fullName>Numero_Sitio__c</fullName>
    <label>Numero Sitio</label>
    <length>255</length>
    <type>Text</type>
</CustomField>