force-app/main/default/objects/RGU_Change_to_approve__c/fields/Observaciones_PM__c.field-meta.xml
<CustomField>
    <fullName>Observaciones_PM__c</fullName>
    <label>Observaciones PM</label>
    <type>TextArea</type>
</CustomField>