force-app/main/default/objects/RGU_Change_to_approve__c/fields/OBSERVACIONES_TMX_RURAL__c.field-meta.xml
<CustomField>
    <fullName>OBSERVACIONES_TMX_RURAL__c</fullName>
    <label>OBSERVACIONES TMX RURAL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>