force-app/main/default/objects/RGU_Change_to_approve__c/fields/Orden_de_Aprovisionamiento_IOM_TMX__c.field-meta.xml
<CustomField>
    <fullName>Orden_de_Aprovisionamiento_IOM_TMX__c</fullName>
    <label>Orden de Aprovisionamiento IOM TMX</label>
    <length>255</length>
    <type>Text</type>
</CustomField>