force-app/main/default/objects/RGU_Change_to_approve__c/fields/Paquete_KA__c.field-meta.xml
<CustomField>
    <fullName>Paquete_KA__c</fullName>
    <label>Paquete KA</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Paquete_KA</valueSetName>
    </valueSet>
</CustomField>