force-app/main/default/objects/RGU_Change_to_approve__c/fields/PhysicalLocation__c.field-meta.xml
<CustomField>
    <fullName>PhysicalLocation__c</fullName>
    <label>PhysicalLocation</label>
    <scale>6</scale>
    <type>Location</type>
</CustomField>