force-app/main/default/objects/RGU_Change_to_approve__c/fields/QO_IOM__c.field-meta.xml
<CustomField>
    <fullName>QO_IOM__c</fullName>
    <inlineHelpText>QO formato IOM de Telmex</inlineHelpText>
    <label>QO IOM</label>
    <length>12</length>
    <type>Text</type>
</CustomField>