force-app/main/default/objects/RGU_Change_to_approve__c/fields/Referencia_Elara__c.field-meta.xml
<CustomField>
    <fullName>Referencia_Elara__c</fullName>
    <label>Referencia Elara</label>
    <length>255</length>
    <type>Text</type>
</CustomField>