force-app/main/default/objects/RGU_Change_to_approve__c/fields/Referencia_Elara_Anterior__c.field-meta.xml
<CustomField>
    <fullName>Referencia_Elara_Anterior__c</fullName>
    <label>Referencia Elara Anterior</label>
    <length>255</length>
    <type>Text</type>
</CustomField>