force-app/main/default/objects/RGU_Change_to_approve__c/fields/Referencia_Elara_Original__c.field-meta.xml
<CustomField>
    <fullName>Referencia_Elara_Original__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Es la relación con la referencia elara a la que se desea aplicar los cambios con el proceso de aprobación</description>
    <label>Referencia Elara Original</label>
    <referenceTo>RGU__c</referenceTo>
    <relationshipLabel>Referencias Elara por aprobar</relationshipLabel>
    <relationshipName>RGU_Changes_to_approve</relationshipName>
    <type>Lookup</type>
</CustomField>