force-app/main/default/objects/RGU_Change_to_approve__c/fields/Servicio__c.field-meta.xml
<CustomField>
    <fullName>Servicio__c</fullName>
    <label>Servicio de conectividad</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Servicio_de_conectividad</valueSetName>
    </valueSet>
</CustomField>