force-app/main/default/objects/RGU_Change_to_approve__c/fields/Soporte_para_pago_del_servicio__c.field-meta.xml
<CustomField>
    <fullName>Soporte_para_pago_del_servicio__c</fullName>
    <label>Soporte para pago del servicio</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Soporte_para_pago_del_servicio</valueSetName>
    </valueSet>
</CustomField>