force-app/main/default/objects/RGU_Change_to_approve__c/fields/SS_UP__c.field-meta.xml
<CustomField>
    <fullName>SS_UP__c</fullName>
    <label>SS UP</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>