force-app/main/default/objects/RGU_Change_to_approve__c/fields/Status_COS__c.field-meta.xml
<CustomField>
    <fullName>Status_COS__c</fullName>
    <label>Status COS</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Activo</fullName>
            </value>
            <value>
                <fullName>Actualización</fullName>
            </value>
            <value>
                <fullName>Cancelado</fullName>
            </value>
            <value>
                <fullName>Desactivado</fullName>
            </value>
            <value>
                <fullName>Desinstalado</fullName>
            </value>
            <value>
                <fullName>Instalado</fullName>
            </value>
            <value>
                <fullName>Por Instalar</fullName>
            </value>
            <value>
                <fullName>Reemplazo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>