force-app/main/default/objects/RGU_Change_to_approve__c/fields/Status_CoS_RE_Origen__c.field-meta.xml
<CustomField>
    <fullName>Status_CoS_RE_Origen__c</fullName>
    <formula>TEXT( Referencia_Elara_Original__r.Status_COS__c )</formula>
    <label>Status CoS RE Origen</label>
    <type>Text</type>
</CustomField>