force-app/main/default/objects/RGU_Change_to_approve__c/fields/Status_Reconocido_Cliente__c.field-meta.xml
<CustomField>
    <fullName>Status_Reconocido_Cliente__c</fullName>
    <label>Status Reconocido Cliente</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Activo</fullName>
            </value>
            <value>
                <fullName>Desactivado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>