force-app/main/default/objects/RGU_Change_to_approve__c/fields/Tipo_de_Enlace__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Enlace__c</fullName>
    <label>Arquitectura</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Arquitectura</valueSetName>
    </valueSet>
</CustomField>