force-app/main/default/objects/RGU_Change_to_approve__c/fields/Tipo_de_Ingreso__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Ingreso__c</fullName>
    <label>Tipo de Ingreso</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Tipo_Ingreso</valueSetName>
    </valueSet>
</CustomField>