force-app/main/default/objects/RGU_Change_to_approve__c/fields/Tipo_de_Ingreso_AI__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Ingreso_AI__c</fullName>
    <label>Tipo de Ingreso AI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>