force-app/main/default/objects/RGU_Change_to_approve__c/fields/Tipo_de_movimiento_IOM__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_movimiento_IOM__c</fullName>
    <label>Tipo de movimiento IOM</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alta</fullName>
            </value>
            <value>
                <fullName>Baja</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>