force-app/main/default/objects/RGU_Change_to_approve__c/fields/Tipo_de_servicio_IOM__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_servicio_IOM__c</fullName>
    <label>Tipo de servicio IOM</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RPV RESPALDO SATELITAL</fullName>
            </value>
            <value>
                <fullName>RPV RESPALDO SATELITAL NUBE</fullName>
            </value>
            <value>
                <fullName>RPV SATELITAL</fullName>
            </value>
            <value>
                <fullName>RPV SATELITAL NUBE</fullName>
            </value>
            <value>
                <fullName>RPV TRANSACCIONAL SATELITAL</fullName>
            </value>
            <value>
                <fullName>IDE PRINCIPAL</fullName>
            </value>
            <value>
                <fullName>IDE RESPALDO</fullName>
            </value>
            <value>
                <fullName>IDE PRINCIPAL CONTINGENCIAS</fullName>
            </value>
            <value>
                <fullName>INTERNET SATELITAL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>