force-app/main/default/objects/RGU_Change_to_approve__c/fields/Tipo_de_sitio_por_aprobar__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_sitio_por_aprobar__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tipo de sitio por aprobar</label>
    <referenceTo>TipoDeSitioPorAprobar__c</referenceTo>
    <relationshipLabel>Referencias Elara por aprobar</relationshipLabel>
    <relationshipName>Referencias_Elara_por_aprobar</relationshipName>
    <type>Lookup</type>
</CustomField>