force-app/main/default/objects/RGU_Change_to_approve__c/fields/Tipo_IngresoX__c.field-meta.xml
<CustomField>
    <fullName>Tipo_IngresoX__c</fullName>
    <label>Tipo IngresoX</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Venta Nueva</fullName>
            </value>
            <value>
                <fullName>Renovación</fullName>
            </value>
            <value>
                <fullName>Base de Retención</fullName>
            </value>
            <value>
                <fullName>Base de Retención - Requiere Renovación</fullName>
            </value>
            <value>
                <fullName>Venta Nueva - Crecimiento Orgánico</fullName>
            </value>
            <value>
                <fullName>Venta Nueva - Try &amp; Buy</fullName>
            </value>
            <value>
                <fullName>Vencido - Requiere Renovación</fullName>
            </value>
            <value>
                <fullName>Evaluación Interna</fullName>
            </value>
            <value>
                <fullName>Demo sin costo</fullName>
            </value>
            <value>
                <fullName>No Aplica - EP No Activo</fullName>
            </value>
            <value>
                <fullName>Rate Card</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>