force-app/main/default/objects/RGU_Change_to_approve__c/fields/Total_Meses_Activo__c.field-meta.xml
<CustomField>
    <fullName>Total_Meses_Activo__c</fullName>
    <label>Total Meses Activo</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>