force-app/main/default/objects/RGU_Change_to_approve__c/fields/Unidad_de_Negocio__c.field-meta.xml
<CustomField>
    <fullName>Unidad_de_Negocio__c</fullName>
    <label>Unidad de Negocio</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Unidad_de_Negocio</valueSetName>
    </valueSet>
</CustomField>