force-app/main/default/objects/RGU_Change_to_approve__c/fields/VTC_Referencia_Original__c.field-meta.xml
<CustomField>
    <fullName>VTC_Referencia_Original__c</fullName>
    <label>VTC Referencia Original</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>