force-app/main/default/objects/RGU_Change_to_approve__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Nombre_de_sitio__c</columns>
    <columns>BWBajadaKbps__c</columns>
    <columns>BWSubidaKbps__c</columns>
    <columns>Cap_Fap_GB__c</columns>
    <columns>Cierre__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Tipo_de_sitio_por_aprobar__c</field>
        <operation>equals</operation>
        <value>TSPA000048</value>
    </filters>
    <label>Todos los registros</label>
</ListView>