force-app/main/default/objects/RGU_Change_to_approve__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>Nombre_RGU_Original__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>